testing project images

--- a/src/content/projects/bangalore-central-university.mdx
+++ b/src/content/projects/bangalore-central-university.mdx
@@ -5,7 +5,7 @@ description: "Contributed to campus and programme development for Bangalore Cent
 categories: ["Research & Planning", "Teaching", "Multidisciplinary"]
 associations: ["Bangalore Central University"]
 status: "Completed"
-image: "/images/bcu-campus-development.jpg"
+image: "/images/projects/bcu.png"
 imageAlt: "Bangalore Central University campus"
 tags: ["campus planning", "curriculum development", "industry interface", "Bangalore Central University", "higher education"]
 icon: "solar:city-linear"
