--- a/src/content/projects/bangalore-open-spaces.mdx
+++ b/src/content/projects/bangalore-open-spaces.mdx
@@ -5,7 +5,7 @@ description: "A study on Bangalore's open spaces, conducted in 2016, examining u
 categories: ["Research & Planning", "Multidisciplinary"]
 associations: ["Sustainable Urbanism International", "UNESCO-India"]
 status: "Completed"
-image: "/images/bangalore-open-spaces.jpg"
+image: "/images/projects/open-spaces.png"
 imageAlt: "Parks and open spaces in Bangalore"
 tags: ["Bangalore", "open spaces", "urban planning", "policy", "public engagement", "cultural significance"]
 icon: "solar:city-linear"
