--- a/src/content/projects/flockr-doing-things-together.mdx
+++ b/src/content/projects/flockr-doing-things-together.mdx
@@ -5,7 +5,7 @@ description: "Flockr is a mobile app designed to simplify group planning and act
 categories: ["Technology & Apps", "Venture"]
 associations: []
 status: "In Progress"
-image: "/images/flockr-app.jpg"
+image: "/images/projects/flockr.png"
 imageAlt: "Flockr app interface on a mobile phone"
 tags: ["mobile app", "group planning", "task management", "messaging", "collaboration", "iOS", "Android"]
 icon: "solar:monitor-smartphone-outline"
