--- a/src/content/projects/mapping-cities-course.mdx
+++ b/src/content/projects/mapping-cities-course.mdx
@@ -5,7 +5,7 @@ description: "Taught a course on Mapping Cities at SJB College of Architecture, 
 categories: ["Teaching", "Technology & Apps", "Multidisciplinary"]
 associations: ["SJB College of Architecture, Bangalore"]
 status: "Completed"
-image: "/images/mapping-cities-course.jpg"
+image: "/images/projects/mapping-cities.png"
 imageAlt: "Students working on maps in a classroom"
 tags: ["GIS", "urban data", "mapping", "data analysis", "urban planning", "architecture", "education", "data visualization"]
 icon: "solar:microphone-2-outline"
