--- a/src/content/projects/spice-studio.mdx
+++ b/src/content/projects/spice-studio.mdx
@@ -5,7 +5,7 @@ description: "Developed Spice Studio, an automated processing system for GoodHar
 categories: ["Technology & Apps", "Business & Marketing"]
 associations: ["GoodHarvest", "Mithun SG"]
 status: "Completed"
-image: "/images/spice-studio.jpg"
+image: "/images/projects/spice-studio.png"
 imageAlt: "User-created spice blends and multigrain flours"
 tags: ["food tech", "user-generated content", "recipe customization", "e-commerce", "GoodHarvest", "automation", "spice blends", "multigrain flours", "cultural preservation", "Indian cuisine"]
 icon: "solar:monitor-smartphone-outline"
